[package]
name = "remu-audio"
version = "0.1.0-beta.0"
edition = "2021"
exclude = ["examples/*"]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
cpal = "0.15.3"
futures = "0.3.31"
rodio = "0.21.1"
reqwest = { version = "0.12.15", features = ["stream", "blocking"] }
tokio = { version = "1.45.1", features = ["full"] }
tempfile = "3.20.0"
failure = "0.1.8"

crossbeam-channel = "0.5"
futures-util = "0.3.31"
tokio-util = "0.7.16"
symphonia = "0.5.4"
symphonia-metadata = "0.5.4"
